# DeepTextSpotter

./: .gitignore  CMakeLists.txt  README.md  data.py  demo.py  models.py  train.py  utils.py  validation.py  vis.py
models/: .gitignore  model_cz.prototxt  solver_ctc.prototxt  tiny.prototxt  tiny_solver.prototxt
src/: CMakeLists.txt  StringUtils.h  test_decode.py  trie.cpp  trie.hpp  trie_api.c  trie_api.h
